<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MobileNumberActivity">
    <include layout="@layout/toolbar_home"/>
    <customfonts.TextViewSFProDisplayMedium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23.3sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="27dp"
        android:textColor="@color/dark_grey_color"
        android:text="@string/enter_mobile_number"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="54.3dp">
        <customfonts.EditTextRobotoRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:layout_marginLeft="34dp"
            android:textColor="#8f948d"
            android:background="@color/transparent"
            android:hint="Mobile number"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/smartphone"
            android:layout_marginRight="48dp"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="34dp"
        android:background="#9f9e9e"/>
    <customfonts.MyTextView_Roboto_Italic
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11.3sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:layout_marginTop="20.7dp"
        android:textColor="@color/blackTxt"
        android:text="@string/your_mobile_number_will_be_linked_with"
        />
    <customfonts.MyTextView_Roboto_Medium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11.3sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:layout_marginTop="3.3dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/blackTxt"
        android:text="@string/rushabhpatel381_gmail_com"
        />
    <LinearLayout
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="88.3dp"
        android:background="@drawable/gradient_circle">
    <ImageView
        android:layout_width="26dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:src="@drawable/arrowpointingtoright"/>
    </LinearLayout>


</LinearLayout>