<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".OtpVerificationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <include layout="@layout/toolbar_home"/>
    <customfonts.MyTextView_Roboto_Medium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23.3sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:layout_marginLeft="27.3dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/dark_grey_color"
        tools:text="OTP Verification"
        />
    <customfonts.MyTextView_Roboto_Regular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:layout_marginTop="54.3dp"
        android:layout_marginLeft="33.7dp"
        android:textColor="@color/greyTxt"
        android:text="X X X X"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="34dp"
        android:background="#9f9e9e"/>
    <customfonts.MyTextView_Roboto_Medium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11.3sp"
        android:layout_marginTop="20.7dp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:text="@string/_9549990169_will_be_linked_with"
        />
    <customfonts.MyTextView_Roboto_Medium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11.3sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/rushabhpatel381_gmail_com"
        />
    <customfonts.MyTextView_Roboto_Medium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11.3sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="#3492ff"
        android:layout_marginTop="22dp"
        android:text="@string/change_phone_number"
        />
    </LinearLayout>
    <customfonts.MyTextView_Roboto_Medium
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13.3sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="@color/grey_resend_txt"
        android:text="@string/resend_otp"
        android:layout_above="@id/ll1"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="94.2dp"
        android:id="@+id/ll1"
        android:orientation="vertical"
        android:background="@drawable/gradient_bg"
        android:layout_alignParentBottom="true">
        <customfonts.MyTextView_Roboto_Medium
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12.7sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:layout_marginTop="34dp"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:text="We are verifying your mobile number"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/circle"/>
            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/circle"/>
            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/circle"/>
            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:src="@drawable/circle"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>