<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backrground"
    tools:context=".HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/toolbar_home"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:paddingTop="20dp"
            android:layout_marginTop="25.2dp"
            android:layout_marginBottom="32dp"
            android:elevation="2dp"
            android:paddingBottom="19dp"
            android:background="@drawable/search_rect">
            <customfonts.EditTextRobotoRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:layout_weight="1"
                android:paddingLeft="16.7dp"
                android:background="@color/transparent"
                android:textColor="@color/blackTxt"
                android:hint="Where are you traveling?"
                android:textColorHint="@color/blackTxt"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/places_ic_search"
                android:layout_gravity="center_vertical"
                android:paddingRight="17dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:elevation="5dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@color/white">
                <customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11.7sp"
                    android:paddingLeft="42.7dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/greyTxt"
                    android:text="@string/check_in"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="36.7sp"
                        android:fontFamily="sans-serif-light"
                        android:textStyle="normal"
                        android:paddingLeft="42.7dp"
                        android:textColor="#000200"
                        android:letterSpacing="0.02"
                        android:text="01"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="4dp"
                        android:layout_gravity="center_vertical">

                        <customfonts.MyTextView_Roboto_Regular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="11.7sp"
                            android:fontFamily="sans-serif"
                            android:textStyle="normal"
                            android:textColor="@color/dark_grey_color"
                            android:text="@string/jun_2018"
                            />
                        <customfonts.MyTextView_Roboto_Regular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="11.7sp"
                            android:fontFamily="sans-serif"
                            android:textStyle="normal"
                            android:textColor="@color/greyTxt"
                            android:text="@string/friday"
                            />
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/view_line"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@color/white">
                <customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11.7sp"
                    android:paddingLeft="42.7dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/greyTxt"
                    android:text="Check-OUT"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="36.7sp"
                        android:fontFamily="sans-serif-light"
                        android:textStyle="normal"
                        android:paddingLeft="42.7dp"
                        android:textColor="#000200"
                        android:letterSpacing="0.02"
                        android:text="04"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="4dp"
                        android:layout_gravity="center_vertical">

                        <customfonts.MyTextView_Roboto_Regular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="11.7sp"
                            android:fontFamily="sans-serif"
                            android:textStyle="normal"
                            android:textColor="@color/dark_grey_color"
                            android:text="@string/jun_2018"
                            />
                        <customfonts.MyTextView_Roboto_Regular
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="11.7sp"
                            android:fontFamily="sans-serif"
                            android:textStyle="normal"
                            android:textColor="@color/greyTxt"
                            android:text="@string/mon"
                            />
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@color/white">
                <customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11.7sp"
                    android:paddingLeft="42.7dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/greyTxt"
                    android:text="@string/rooms"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="36.7sp"
                        android:fontFamily="sans-serif-light"
                        android:textStyle="normal"
                        android:paddingLeft="42.7dp"
                        android:textColor="#000200"
                        android:letterSpacing="0.02"
                        android:text="01"
                        />



                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/view_line"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@color/white">
                <customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11.7sp"
                    android:paddingLeft="42.7dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/greyTxt"
                    android:text="@string/guest"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="36.7sp"
                        android:fontFamily="sans-serif-light"
                        android:textStyle="normal"
                        android:paddingLeft="42.7dp"
                        android:textColor="#000200"
                        android:letterSpacing="0.02"
                        android:text="02"
                        />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_line"/>
        </LinearLayout>

        <customfonts.MyTextView_Roboto_Medium
            android:layout_width="70.7dp"
            android:layout_height="70.7dp"
            android:textSize="13.3sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:letterSpacing="0.02"
            android:text="@string/search"
            android:background="@drawable/gradient_blue_circle"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="213dp">
    <LinearLayout
        android:layout_width="33.3dp"
        android:layout_height="33.3dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/grey_circle">
        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/moon"/>
        <customfonts.MyTextView_Roboto_Medium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="6sp"
            android:layout_marginTop="2dp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
            android:text="@string/_3_nights"
        android:textColor="@color/dark_grey_color"
        android:letterSpacing="0.02"
        android:gravity="center_horizontal" />



    </LinearLayout>
    </FrameLayout>
    <com.roughike.bottombar.BottomBar
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="52.6dp"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:elevation="8dp"
        android:gravity="bottom|end"
        android:layout_gravity="bottom"
        app:bb_activeTabColor="#ffffff"
        app:bb_badgesHideWhenActive="true"
        app:bb_inActiveTabColor="#a4ebfe"
        app:bb_showShadow="true"
        app:bb_tabXmlResource="@xml/tab"
        app:bb_titleTextAppearance="@style/botoombar_textchange"
        app:bb_titleTypeFace="fonts/Roboto-Regular.ttf"
        app:paddingStart="10dp" />

</RelativeLayout>